# karaf-jni

./: .gitignore  ReadMe.md
c/: .gitignore  CMakeLists.txt  config.h.in
c/include/: com_rh_example_NativeBridge.h
c/src/: nbridge.c
java/: pom.xml
java/src/main/java/com/rh/example/: JNITest.java  NativeBridge.java  NativeBridgeCallback.java
